fixed greeting alignment. authentication before actions in movies

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,7 +75,7 @@ p {
 greeting {
   font-size: 1.5em;
   color: $gray-medium-light;
-  margin-top: 90px;
+  margin-top: 10px;
   padding-top: 9px;
 
 }
